Register and Login bugs fixes